# parchives

./: HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  org.mate.Peony-archives.service.in  org.mate.peony-archives.gschema.xml.in  peony-archives.1  peony-archives.appdata.xml.in  peony-archives.desktop.in.in
debian/: changelog  control  copyright  peony-archives-common.install  rules  watch
help/: ChangeLog  Makefile.am
help/C/: index.docbook
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/it/: it.po
help/ja/: ja.po
help/nl/: nl.po
help/oc/: oc.po
help/ru/: ru.po
help/sv/: sv.po
help/uk/: uk.po
help/vi/: vi.po
help/zh_CN/: zh_CN.po
peony/: Makefile.am  libpeony-peony-archives.peony-extension.in.in  peony-archives-module.c  peony-peony-archives.c  peony-peony-archives.h
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  fur.po  fy.po  (+68 more)
src/: Makefile.am  actions.c  actions.h  dlg-add-files.c  dlg-add-files.h  dlg-add-folder.c  dlg-add-folder.h  dlg-ask-password.c  dlg-ask-password.h  dlg-batch-add.c  dlg-batch-add.h  dlg-delete.c  dlg-delete.h  dlg-extract.c  dlg-extract.h  dlg-new.c  dlg-new.h  dlg-open-with.c  (+82 more)
(+7 files in other folders)
