@YELP_HELP_RULES@

HELP_ID = peony-archives
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = 					\
	figures/peony-archives_home.png		\
	figures/peony-archives_leftarrow.png	\
	figures/peony-archives_main_window.png	\
	figures/peony-archives_rightarrow.png	\
	figures/peony-archives_uparrow.png

HELP_LINGUAS = bg ca cs de el en_GB es fi fr it ja oc nl ru sv vi uk zh_CN

-include $(top_srcdir)/git.mk
